Updated index redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!-- testing -->
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0; url=http://railsbridgecapetown.org/">
+    </head>
+    <body>
+
+    </body>
+</html>
