--- a/start.html
+++ b/start.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=http://docs.railsbridgecapetown.org/curriculum/">
+        <meta http-equiv="refresh" content="0; url=http://docs.railsbridgecapetown.org/intro-to-rails/">
     </head>
     <body>
 
