--- a/uct/index.html
+++ b/uct/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=http://docs.railsbridgecapetown.org/installfest/configure_git?back=linux">
+        <meta http-equiv="refresh" content="0; url=https://gist.github.com/SteveBarnett/306a4c40f63226ba7b8e">
     </head>
     <body>
 
