--- a/resources/index.html
+++ b/resources/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=http://docs.railsbridgecapetown.org/workshop/resources">
+        <meta http-equiv="refresh" content="0; url=https://railsbridgecapetown.org/resources.html">
     </head>
     <body>
 
