--- a/winssl.html
+++ b/winssl.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://gist.github.com/luislavena/f064211759ee0f806c88#installing-using-update-packages-new">
+        <meta http-equiv="refresh" content="0; url=http://guides.rubygems.org/ssl-certificate-update/#manual-solution-to-ssl-issue">
     </head>
     <body>
 
